--- a/forfun.html
+++ b/forfun.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-    <title>odaalida.com</title>
+    <title>Grid</title>
   </head>
 
   <body>
