--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="animation.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
     <title>odaalida.com</title>
   </head>
@@ -25,12 +24,11 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <!-- <a class="menu-categori" href="about.html">About</a> -->
           <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
       <div class="intro-content child">
-        <div class="intro-group">
+        <div id="bookmark-index" class="intro-group">
           <div class="vertical-line">
             <div class="yellow-dot-in-bg"></div>
             <lottie-player
@@ -46,7 +44,7 @@
           <div>
             <h1 class="media-h1">ODA ALIDA</h1>
             <div class="circle-bg-media">
-              <p class="media-paragraph">A digital designer & more.</p>
+              <p class="intro-paragraph">A digital designer & more.</p>
             </div>
             <div class="animation-line-media">
               <lottie-player
@@ -60,14 +58,6 @@
               </lottie-player>
             </div>
           </div>
-          <!-- <div class="arrow-down">
-            <img
-              src="img/arrow-down.svg"
-              width="47px"
-              height="47px"
-              alt="arrow pointing down"
-            />
-          </div> -->
         </div>
         <a href=""
           ><img
@@ -77,11 +67,17 @@
         /></a>
       </div>
       <div class="spacing"></div>
+
       <section class="child">
         <div class="child-container">
           <div class="background-img backgroundimg1"></div>
           <div class="bg-line bg-line1">
             <h2 class="project-title-media">Odaalida.com</h2>
+            <img
+              class="arrow-down arrow-down-position"
+              src="img/down.svg"
+              alt="arrow icon pointing down"
+            />
             <div class="animation-parent">
               <a href="project-one.html">
                 <h2
@@ -102,10 +98,15 @@
         <div class="child-container">
           <div class="background-img backgroundimg2"></div>
           <div class="mq-bg-square-clickable">
-            <a href="project-one.html">
-              <div class="bg-line bg-line2">
-                <h2 class="project-title-media">ReThink — Vaccine</h2>
-                <div class="animation-parent">
+            <div class="bg-line bg-line2">
+              <h2 class="project-title-media">ReThink — Vaccine</h2>
+              <img
+                class="arrow-down arrow-down-position"
+                src="img/down.svg"
+                alt="arrow icon pointing down"
+              />
+              <div class="animation-parent">
+                <a href="project-two.html">
                   <h2
                     class="
                       project-title-media
@@ -115,9 +116,9 @@
                   >
                     View project
                   </h2>
-                </div>
+                </a>
               </div>
-            </a>
+            </div>
           </div>
         </div>
       </section>
@@ -126,8 +127,13 @@
           <div class="background-img backgroundimg3"></div>
           <div class="bg-line bg-line3">
             <h2 class="project-title-media">Rudolf Steinerskolan</h2>
+            <img
+              class="arrow-down arrow-down-position"
+              src="img/down.svg"
+              alt="arrow icon pointing down"
+            />
             <div class="animation-parent">
-              <a href="project3.html">
+              <a href="project-three.html">
                 <h2
                   class="
                     project-title-media project-title-media-bold
@@ -146,8 +152,13 @@
           <div class="background-img backgroundimg4"></div>
           <div class="bg-line bg-line4">
             <h2 class="project-title-media">Smoove — Light Cycle</h2>
+            <img
+              class="arrow-down arrow-down-position"
+              src="img/down.svg"
+              alt="arrow icon pointing down"
+            />
             <div class="animation-parent">
-              <a href="projet4.html">
+              <a href="project-four.html">
                 <h2
                   class="
                     project-title-media
@@ -172,6 +183,11 @@
               (allergic), travel, eat ice cream.
             </p>
           </div>
+          <img
+            class="arrow-down arrow-down-position arrow-down-white"
+            src="img/down.svg"
+            alt="arrow icon pointing down"
+          />
         </div>
       </section>
       <footer class="footer child">
@@ -197,6 +213,12 @@
             /></a>
           </div>
           <h3 class="copywright">Oda Alida©2021</h3>
+          <a class="arrow-up-right" href="#bookmark-index"
+            ><img
+              class="arrow-up"
+              src="img/down.svg"
+              alt="arrow icon pointing up"
+          /></a>
         </div>
       </footer>
     </main>
