--- a/project-three.html
+++ b/project-three.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-    <title>odaalida.com</title>
+    <title>Rudolf Steinerskolan</title>
   </head>
 
   <body>
@@ -24,17 +23,17 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <!-- <a class="menu-categori" href="about.html">About</a> -->
+
           <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
-      <!-- header starts -->
+
       <section class="child">
         <div class="child-container">
           <div class="project-img project-img1"></div>
-          <div class="project-color-rectangle project-color-rectangle1">
+          <div class="project-color-rectangle project-color-rectangle3">
             <div class="project-row1">
-              <h2>ReThink — Vaccine</h2>
+              <h2>Rudolf Steinerskolan</h2>
             </div>
             <div class="project-row2">
               <div class="project-column2">
@@ -59,7 +58,6 @@
           </div>
         </div>
       </section>
-      <!-- header ends -->
 
       <section class="child">
         <div class="image-fit textbox">
