--- a/project-two.html
+++ b/project-two.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-    <title>odaalida.com</title>
+    <title>ReThink</title>
   </head>
 
   <body>
@@ -24,15 +23,14 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <!-- <a class="menu-categori" href="about.html">About</a> -->
           <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
-      <!-- header starts -->
+
       <section class="child">
-        <div class="child-container bg-container-breakp">
-          <div class="project-img project-img1"></div>
-          <div class="project-color-rectangle project-color-rectangle1">
+        <div class="child-container bp-project-two-bg">
+          <div class="project-img project-img2"></div>
+          <div class="project-color-rectangle project-color-rectangle2">
             <div class="project-row1">
               <h2 class="inside-project-title-media">ReThink</h2>
             </div>
@@ -40,55 +38,51 @@
               <div class="project-column2">
                 <h4 class="h4-project-media">Role</h4>
                 <p class="p-project-media">UI-design</p>
-                <p class="p-project-media">Web-design</p>
+                <p class="p-project-media">UX-design</p>
               </div>
               <div class="project-column2">
                 <h4 class="h4-project-media">Tools</h4>
-                <p class="p-project-media">Visual Studio Code</p>
-                <p class="p-project-media">HTML & CSS</p>
+                <p class="p-project-media">Figma</p>
               </div>
               <div class="project-column2">
                 <h4 class="h4-project-media">Team</h4>
-                <p class="p-project-media">Oda Alida Bjøre</p>
-                <p class="p-project-media">Matthew Lalala</p>
+                <p class="p-project-media">Oda Alida Bjørke</p>
+                <p class="p-project-media">Matthew Blaxland</p>
               </div>
               <div class="project-column2">
                 <h4 class="h4-project-media">Case</h4>
-                <p class="p-project-media">Portfolio</p>
+                <p class="p-project-media">Vaccine</p>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- header ends -->
 
       <section class="child">
         <div class="image-fit textbox">
           <div class="text-container">
             <h2 class="text-container-title">Brief + Idea</h2>
             <p class="paragraph-text">
-              What does a digital product look like that helps us change our
-              food waste behavior?
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
+              iure dolorem.
             </p>
             <p class="paragraph-text">
-              So what if there was a function that let me know how long does my
-              goods last from the date I bought them? And what if I could get an
-              overview of how much I have used of the product? It’s not always
-              appropriate to call your mother and ask if I can eat a green
-              potato or not. Smart tips on such things would have been nice,
-              under the same function, right?
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque
+              omnis excepturi quos ex quam possimus accusamus nostrum error
+              natus commodi. Quos recusandae veniam alias architecto neque
+              pariatur numquam eaque doloremque!
             </p>
           </div>
         </div>
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg5"></div>
+          <div class="background-img project-two-bg-img1"></div>
         </div>
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg6"></div>
+          <div class="background-img project-two-bg-img2"></div>
         </div>
       </section>
       <section class="child">
@@ -109,7 +103,7 @@
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg7"></div>
+          <div class="background-img project-two-bg-img3"></div>
         </div>
       </section>
     </main>
