--- a/project.html
+++ b/project.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-    <title>odaalida.com</title>
+    <title>Projects</title>
   </head>
 
   <body id="change-bg">
@@ -24,7 +23,6 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <!-- <a class="menu-categori" href="about.html">About</a> -->
           <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
@@ -44,35 +42,41 @@
           </div>
         </div>
         <div class="case-container-column">
-          <div
-            class="case-img-size case-2"
-            onmouseover="chbg('#C698DB')"
-            onmouseout="chbg('#fff')"
-          ></div>
+          <a href="project-two.html">
+            <div
+              class="case-img-size case-2"
+              onmouseover="chbg('#C698DB')"
+              onmouseout="chbg('#fff')"
+            ></div>
+          </a>
           <div>
             <h4>ReThink — Vaccine</h4>
-            <p class="paragraph-20">Web-design, UX, UI</p>
+            <p class="paragraph-20">UX, UI</p>
           </div>
         </div>
       </div>
       <div class="case-wrapper-row">
         <div class="case-container-column">
-          <div
-            class="case-img-size case-3"
-            onmouseover="chbg('#92CB9C')"
-            onmouseout="chbg('#fff')"
-          ></div>
+          <a href="project-three.html">
+            <div
+              class="case-img-size case-3"
+              onmouseover="chbg('#92CB9C')"
+              onmouseout="chbg('#fff')"
+            ></div>
+          </a>
           <div>
             <h4>Rudolf Steinerskolan</h4>
             <p class="paragraph-20">Web-design, UX, UI</p>
           </div>
         </div>
         <div class="case-container-column">
-          <div
-            class="case-img-size case-4"
-            onmouseover="chbg('#00C690')"
-            onmouseout="chbg('#fff')"
-          ></div>
+          <a href="project-four.html">
+            <div
+              class="case-img-size case-4"
+              onmouseover="chbg('#00C690')"
+              onmouseout="chbg('#fff')"
+            ></div>
+          </a>
           <div>
             <h4>Smoove Light Cycle</h4>
             <p class="paragraph-20">Web-design, UX, UI</p>
@@ -82,11 +86,13 @@
       <div class="case-wrapper-row last-row">
         <div class="case-container-column case-empty"></div>
         <div class="case-container-column">
-          <div
-            class="case-img-size case-5"
-            onmouseover="chbg('#FF95BB')"
-            onmouseout="chbg('#fff')"
-          ></div>
+          <a href="forfun.html">
+            <div
+              class="case-img-size case-5"
+              onmouseover="chbg('#FF95BB')"
+              onmouseout="chbg('#fff')"
+            ></div>
+          </a>
           <div>
             <h4>View a grid of fun</h4>
           </div>
