--- a/photography.html
+++ b/photography.html
@@ -5,30 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-    <title>About</title>
+    <title>Info</title>
   </head>
-  <body class="about-bg-color">
+  <body class="info-bg-color">
     <div>
       <main class="flex-container">
         <div class="header">
           <a class="logo logoabout" href="index.html">O A</a>
+          <a class="logo-media" href="index.html">ODA ALIDA</a>
           <nav class="topnav">
             <a id="menu-btn" class="nav-button" href="#"
-              ><img src="img/menu.svg" width="30px" alt="menu-button"
+              ><img
+                class="menu-white"
+                src="img/menu.svg"
+                width="30px"
+                alt="menu-button"
             /></a>
             <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
           </nav>
           <div id="mylinks" class="my-menu">
             <a class="menu-categori" href="project.html">Projects</a>
             <a class="menu-categori" href="forfun.html">A grid of fun</a>
-            <a class="menu-categori" href="about.html">About me</a>
-            <a class="menu-categori" href="contact.html">Say hello</a>
+            <a class="menu-categori" href="info.html">Info</a>
           </div>
         </div>
+
+        <footer class="footer">
+          <div class="footer-container">
+            <h2 class="work-together page-hover">Let's work together!</h2>
+            <h3 class="footer-left">hello@odaalida.com</h3>
+            <div class="social-buttons">
+              <img
+                src="img/instagram.svg"
+                width="44px"
+                height="44px"
+                alt="instagram button"
+              />
+              <a
+                href="www.linkedin.com/in/oda-alida-bjørke-54652938
+              "
+                target="_blank"
+                ><img
+                  src="img/linkedin.svg"
+                  width="44px"
+                  height="44px"
+                  alt="linkedin button"
+              /></a>
+            </div>
+            <h3 class="copywright">Oda Alida©2021</h3>
+          </div>
+        </footer>
       </main>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
