--- a/project-one.html
+++ b/project-one.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
-
     <title>odaalida.com</title>
   </head>
 
@@ -24,13 +22,12 @@
         <div id="mylinks" class="my-menu">
           <a class="menu-categori" href="project.html">Projects</a>
           <a class="menu-categori" href="forfun.html">A grid of fun</a>
-          <!-- <a class="menu-categori" href="about.html">About</a> -->
           <a class="menu-categori menu-4" href="info.html">Info</a>
         </div>
       </div>
-      <!-- header starts -->
+
       <section class="child">
-        <div class="child-container bg-container-breakp">
+        <div class="child-container bp-project-one-bg">
           <div class="project-img project-img1"></div>
           <div class="project-color-rectangle project-color-rectangle1">
             <div class="project-row1">
@@ -59,35 +56,32 @@
           </div>
         </div>
       </section>
-      <!-- header ends -->
 
       <section class="child">
         <div class="image-fit textbox">
           <div class="text-container">
             <h2 class="text-container-title">Brief + Idea</h2>
             <p class="paragraph-text">
-              What does a digital product look like that helps us change our
-              food waste behavior?
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
+              iure dolorem.
             </p>
             <p class="paragraph-text">
-              So what if there was a function that let me know how long does my
-              goods last from the date I bought them? And what if I could get an
-              overview of how much I have used of the product? It’s not always
-              appropriate to call your mother and ask if I can eat a green
-              potato or not. Smart tips on such things would have been nice,
-              under the same function, right?
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque
+              omnis excepturi quos ex quam possimus accusamus nostrum error
+              natus commodi. Quos recusandae veniam alias architecto neque
+              pariatur numquam eaque doloremque!
             </p>
           </div>
         </div>
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg5"></div>
+          <div class="background-img project-one-bg-img1"></div>
         </div>
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg6"></div>
+          <div class="background-img project-one-bg-img2"></div>
         </div>
       </section>
       <section class="child">
@@ -108,7 +102,7 @@
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg7"></div>
+          <div class="background-img project-one-bg-img3"></div>
         </div>
       </section>
     </main>
