--- a/photography.html
+++ b/photography.html
@@ -6,59 +6,62 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ehi7cev.css" />
 
-    <title>Info</title>
+    <title>Grid</title>
   </head>
-  <body class="info-bg-color">
-    <div>
-      <main class="flex-container">
-        <div class="header">
-          <a class="logo logoabout" href="index.html">O A</a>
-          <a class="logo-media" href="index.html">ODA ALIDA</a>
-          <nav class="topnav">
-            <a id="menu-btn" class="nav-button" href="#"
-              ><img
-                class="menu-white"
-                src="img/menu.svg"
-                width="30px"
-                alt="menu-button"
-            /></a>
-            <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
-          </nav>
-          <div id="mylinks" class="my-menu">
-            <a class="menu-categori" href="project.html">Projects</a>
-            <a class="menu-categori" href="forfun.html">A grid of fun</a>
-            <a class="menu-categori" href="info.html">Info</a>
-          </div>
-        </div>
 
-        <footer class="footer">
-          <div class="footer-container">
-            <h2 class="work-together page-hover">Let's work together!</h2>
-            <h3 class="footer-left">hello@odaalida.com</h3>
-            <div class="social-buttons">
-              <img
-                src="img/instagram.svg"
-                width="44px"
-                height="44px"
-                alt="instagram button"
-              />
-              <a
-                href="www.linkedin.com/in/oda-alida-bjørke-54652938
-              "
-                target="_blank"
-                ><img
-                  src="img/linkedin.svg"
-                  width="44px"
-                  height="44px"
-                  alt="linkedin button"
-              /></a>
-            </div>
-            <h3 class="copywright">Oda Alida©2021</h3>
-          </div>
-        </footer>
-      </main>
+  <body>
+    <main class="flex-container">
+      <div class="header">
+        <a class="logo" href="index.html">O A</a>
+        <a class="logo-media" href="index.html">ODA ALIDA</a>
+        <nav class="topnav">
+          <a id="menu-btn" class="nav-button" href="#"
+            ><img src="img/menu.svg" width="30px" alt="menu-button"
+          /></a>
+          <div id="dot-btn" class="yellow-dot dot-button" href="#"></div>
+        </nav>
+        <div id="mylinks" class="my-menu">
+          <a class="menu-categori" href="project.html">Projects</a>
+          <a class="menu-categori" href="forfun.html">A grid of fun</a>
+          <a class="menu-categori menu-4" href="info.html">Info </a>
+        </div>
+      </div>
+    </main>
+
+    <div class="of-fun-wrapper">
+      <p class="of-fun-p">This page is under construction</p>
+      <img
+        class="of-fun-img"
+        src="img/odaalida-veronicalindahl_1.jpg"
+        alt="image of two dogs"
+      />
     </div>
 
+    <footer class="footer child">
+      <div class="footer-container">
+        <h2 class="work-together page-hover">Let's work together!</h2>
+        <h3>hello@odaalida.com</h3>
+        <div class="social-buttons">
+          <img
+            src="img/instagram.svg"
+            width="44px"
+            height="44px"
+            alt="instagram button"
+          />
+          <a
+            href="www.linkedin.com/in/oda-alida-bjørke-54652938
+          "
+            target="_blank"
+            ><img
+              src="img/linkedin.svg"
+              width="44px"
+              height="44px"
+              alt="linkedin button"
+          /></a>
+        </div>
+        <h3 class="copywright">Oda Alida©2021</h3>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
