--- a/project-three.html
+++ b/project-three.html
@@ -80,12 +80,12 @@
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg5"></div>
+          <div class="background-img project-two-bg-img1"></div>
         </div>
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg6"></div>
+          <div class="background-img project-two-bg-img2"></div>
         </div>
       </section>
       <section class="child">
@@ -106,7 +106,7 @@
       </section>
       <section class="child">
         <div class="child-container">
-          <div class="background-img backgroundimg7"></div>
+          <div class="background-img project-two-bg-img3"></div>
         </div>
       </section>
     </main>
